Added js files for everyone

--- a/index.html
+++ b/index.html
@@ -68,27 +68,54 @@
         <div class="row">
             <div class="col-12 mb-4">
                 <div class="p-3 svg-container">
-                    <textarea class="form-control mb-3" id="name1_description" rows="4" disabled></textarea>
-                    <svg id="name1" class="large_svg"></svg>
+                    <textarea class="form-control mb-3" id="vanshaj_description" rows="4" disabled></textarea>
+                    <svg id="vanshaj" class="large_svg"></svg>
                 </div>
             </div>
             <div class="col-md-6 mb-4">
                 <div class="p-3 svg-container">
-                    <textarea class="form-control mb-3" id="name2_description" rows="4" disabled></textarea>
-                    <svg id="name2" class="small_svg"></svg>
+                    <textarea class="form-control mb-3" id="sumit1_description" rows="4" disabled></textarea>
+                    <svg id="sumit1" class="small_svg"></svg>
                 </div>
             </div>
             <div class="col-md-6 mb-4">
                 <div class="p-3 svg-container">
-                    <textarea class="form-control mb-3" id="name3_description" rows="4" disabled></textarea>
-                    <svg id="name3" class="small_svg"></svg>
+                    <textarea class="form-control mb-3" id="sumit2_description" rows="4" disabled></textarea>
+                    <svg id="sumit2" class="small_svg"></svg>
+                </div>
+            </div>
+            <div class="col-md-6 mb-4">
+                <div class="p-3 svg-container">
+                    <textarea class="form-control mb-3" id="utkarsh_description" rows="4" disabled></textarea>
+                    <svg id="utkarsh" class="small_svg"></svg>
+                </div>
+            </div>
+            <div class="col-md-6 mb-4">
+                <div class="p-3 svg-container">
+                    <textarea class="form-control mb-3" id="ram_description" rows="4" disabled></textarea>
+                    <svg id="ram" class="small_svg"></svg>
+                </div>
+            </div>
+            <div class="col-md-6 mb-4">
+                <div class="p-3 svg-container">
+                    <textarea class="form-control mb-3" id="dhwanil_description" rows="4" disabled></textarea>
+                    <svg id="dhwanil" class="small_svg"></svg>
+                </div>
+            </div>
+            <div class="col-md-6 mb-4">
+                <div class="p-3 svg-container">
+                    <textarea class="form-control mb-3" id="nishanthan_description" rows="4" disabled></textarea>
+                    <svg id="nishanthan" class="small_svg"></svg>
                 </div>
             </div>
         </div>
     </div>
-    <script src="name1.js"></script>
-    <script src="name2.js"></script>
-    <script src="name3.js"></script>
+    <script src="vanshaj.js"></script>
+    <script src="sumit.js"></script>
+    <script src="utkarsh.js"></script>
+    <script src="ram.js"></script>
+    <script src="dhwanil.js"></script>
+    <script src="nishanthan.js"></script>
 </body>
 
 </html>
