data set ready vanshaj

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Project</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" />
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <style>
+    <link rel="stylesheet" href="style.css">
+    <!-- <style>
         body {
             background: linear-gradient(45deg, #f3f4f6, #ffffff);
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -59,7 +60,7 @@
             margin-bottom: 20px;
         }
 
-    </style>
+    </style> -->
 </head>
 
 <body>
