added graph for Nishanthan

--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
                     <svg id="vanshaj" class="large_svg"></svg>
                 </div>
             </div>
+
+            <div class="col-12 mb-4">
+                <div class="p-3 svg-container">
+                    <textarea class="form-control mb-3" id="nishanthan_description" rows="4" disabled></textarea>
+                    <svg id="nishanthan" class="map"></svg>
+                </div>
+            </div>
+
             <div class="col-md-6 mb-4">
                 <div class="p-3 svg-container">
                     <textarea class="form-control mb-3" id="sumit1_description" rows="4" disabled></textarea>
@@ -101,12 +109,6 @@
                 <div class="p-3 svg-container">
                     <textarea class="form-control mb-3" id="dhwanil_description" rows="4" disabled></textarea>
                     <svg id="dhwanil" class="small_svg"></svg>
-                </div>
-            </div>
-            <div class="col-md-6 mb-4">
-                <div class="p-3 svg-container">
-                    <textarea class="form-control mb-3" id="nishanthan_description" rows="4" disabled></textarea>
-                    <svg id="nishanthan" class="small_svg"></svg>
                 </div>
             </div>
         </div>
