tool tip updated and update function added

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             <div class="col-12 mb-4">
                 <div class="p-3 svg-container">
                     <textarea class="form-control mb-3" id="vanshaj_description" rows="4" disabled></textarea>
+                    <div id="svgLegend"></div>
                     <svg id="vanshaj" class="large_svg"></svg>
                 </div>
             </div>
