--- a/index.html
+++ b/index.html
@@ -126,8 +126,9 @@
             </div>
         </div>
     </div>
+    <script type="module" src="common.js"></script>
     <script src="vanshaj.js"></script>
-    <script src="sumit.js"></script>
+    <script type="module" src="sumit.js"></script>
     <script src="utkarsh.js"></script>
     <script src="ram.js"></script>
     <script src="dhwanil.js"></script>
