Utkarsh missed code - added

--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@
             <div class="col-md-6 mb-4">
                 <div class="p-3 svg-container">
                     <textarea class="form-control mb-3" id="utkarsh_description" rows="4" disabled></textarea>
+
+                    <label for="age">Choose an age group:</label>
+
+                    <select id="age-group" name="age-group">
+                        <option value="" disabled selected>Select an age-group</option>
+                      <option value="18-30">18-30</option>
+                      <option value="31-40">31-40</option>
+                      <option value="41-50">41-50</option>
+                      <option value="51-60">51-60</option>
+                    </select>
+
                     <svg id="utkarsh" class="small_svg"></svg>
                     <div class="utkarsh-tooltip"></div>
                 </div>
