--- a/dhwanil.html
+++ b/dhwanil.html
@@ -2,11 +2,50 @@
 <html>
 <head>
     <title>Education Level vs. Jobs/Participants</title>
-    <link rel="stylesheet" type="text/css" href="dhwanil.css">
+    <style>
+
+        #chart {
+            max-width: 90vw;
+            height: auto;
+            margin: auto;
+            border: 1px solid rgb(255, 255, 255);
+        }
+
+        @media (min-width: 768px) {
+            #chart {
+                max-width: 50vw;
+            }
+        }
+
+        .radar-area {
+            fill-opacity: 0.7;
+        }
+
+        .axis line, .levels line {
+            stroke: black;
+            stroke-opacity: 0.75;
+            stroke-width: 2px;
+        }
+
+        .axis text, .radarChartValue, .levelValue {
+            font-family: 'Georgia', serif;
+            fill: #444;
+        }
+
+        .radarChartValue {
+            font-size: 14px;
+        }
+
+        .levelValue {
+            font-size: 10px;
+        }
+
+    </style>
 </head>
 <body>
 
     <div id="educationLevels">
+
         <input type="radio" id="Low" name="educationLevel" value="Low">
         <label for="Low">Low</label><br>
 
