--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     <label for="age">Choose an age group:</label>
 
                     <select id="age-group" name="age-group">
-                        <option value="" disabled selected>Select an age-group</option>
-                      <option value="18-30">18-30</option>
+                        <option value="" disabled>Select an age-group</option>
+                      <option value="18-30" selected>18-30</option>
                       <option value="31-40">31-40</option>
                       <option value="41-50">41-50</option>
                       <option value="51-60">51-60</option>
@@ -84,12 +84,12 @@
         </div>
     </div>
     <script type="module" src="common.js"></script>
-    <script src="vanshaj.js"></script>
+    <script type="module" src="vanshaj.js"></script>
     <script type="module" src="sumit.js"></script>
-    <script src="utkarsh.js"></script>
+    <script type="module" src="utkarsh.js"></script>
     <script src="ram.js"></script>
     <script src="dhwanil.js"></script>
-    <script src="nishanthan.js"></script>
+    <script type="module" src="nishanthan.js"></script>
 </body>
 
 </html>
