Fixed dhwanil's issue, added common color scheme and integrated all updateCharts

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     <script type="module" src="vanshaj.js"></script>
     <script type="module" src="sumit.js"></script>
     <script type="module" src="utkarsh.js"></script>
-    <script src="ram.js"></script>
-    <script src="dhwanil.js"></script>
+    <script type="module" src="ram.js"></script>
+    <script type="module" src="dhwanil.js"></script>
     <script type="module" src="nishanthan.js"></script>
 </body>
 
