--- a/index.html
+++ b/index.html
@@ -9,7 +9,74 @@
 </head>
 
 <body>
-    <div class="container-fluid myContainer">
+    <div
+        style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100%; width: 100%;">
+        <div class="ProjectHeading">
+            <h2 id="ProjectTitle">Urban Pulse : Navigating the Economic</h2>
+        </div>
+        <!--  -->
+        <div id="mainDiv">
+            <div id="leftDiv">
+                <div class="leftCell">
+                    <!-- <textarea class="form-control mb-3" id="sumit2_description" rows="4" disabled></textarea> -->
+                    <svg id="sumit2" width="100%" height="100%">
+
+                    </svg>
+                </div>
+                <div class="leftCell"
+                    style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100%;">
+                    <!-- <textarea class="form-control mb-3" id="utkarsh_description" rows="4" disabled></textarea> -->
+                    <label for="age" style="margin-bottom: 10px;">Choose an age group:</label>
+                    <select id="age-group" name="age-group" style="margin-bottom: 10px;">
+                        <option value="" disabled>Select an age-group</option>
+                        <option value="18-30" selected>18-30</option>
+                        <option value="31-40">31-40</option>
+                        <option value="41-50">41-50</option>
+                        <option value="51-60">51-60</option>
+                    </select>
+                    <svg id="utkarsh" width="100%" height="100%"
+                        style="width: 100%; height: 100%; border: 1px solid #000;"></svg>
+                </div>
+
+                <div class="leftCell">
+                    <!-- <textarea class="form-control mb-3" id="sumit1_description" rows="4" disabled></textarea> -->
+                    <svg id="sumit1" width="100%" height="100%">
+
+                    </svg>
+                </div>
+                <div class="leftCell">
+                    <!-- <textarea class="form-control mb-3" id="dhwanil_description" rows="4" disabled></textarea> -->
+                    <svg id="dhwanil" width="100%" height="100%">
+
+                    </svg>
+                </div>
+            </div>
+            <div id="rightDiv">
+                <div id="rightTopDiv">
+                    <div id="rightTopTopDiv">
+                        <!-- <textarea class="form-control mb-3" id="vanshaj_description" rows="4" disabled></textarea> -->
+                        <svg id="vanshaj" width="100%" height="100%">
+
+                        </svg>
+                    </div>
+                    <div id="rightTopBottomDiv">
+                        <!-- <textarea class="form-control mb-3" id="ram_description" rows="4" disabled></textarea> -->
+                        <svg id="ram" width="150%" height="100%">
+
+                        </svg>
+                    </div>
+                </div>
+                <div id="rightBottomDiv">
+                    <!-- <textarea class="form-control mb-3" id="nishanthan_description" rows="4" disabled></textarea> -->
+                    <svg id="nishanthan" width="100%" height="100%">
+
+                    </svg>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--  -->
+    <!-- <div class="container-fluid myContainer">
         <h1 class="text-center">Group Project</h1>
         <div class="row">
             <div class="col-12 mb-4">
@@ -47,14 +114,14 @@
 
                     <select id="age-group" name="age-group">
                         <option value="" disabled>Select an age-group</option>
-                      <option value="18-30" selected>18-30</option>
-                      <option value="31-40">31-40</option>
-                      <option value="41-50">41-50</option>
-                      <option value="51-60">51-60</option>
+                        <option value="18-30" selected>18-30</option>
+                        <option value="31-40">31-40</option>
+                        <option value="41-50">41-50</option>
+                        <option value="51-60">51-60</option>
                     </select>
 
                     <svg id="utkarsh" class="small_svg"></svg>
-                    
+
                 </div>
             </div>
             <div class="col-md-6 mb-4">
@@ -70,7 +137,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <script type="module" src="common.js"></script>
     <script type="module" src="vanshaj.js"></script>
     <script type="module" src="sumit.js"></script>
