--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang='en'>
 
 <head>
+    
+    </style>
     <title>Project</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" />
     <script src="https://d3js.org/d3.v7.min.js"></script>
@@ -9,10 +11,10 @@
 </head>
 
 <body>
-    <div
+        <div 
         style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100%; width: 100%;">
         <div class="ProjectHeading">
-            <h2 id="ProjectTitle">Urban Pulse : Navigating the Economic</h2>
+            <h2 id="ProjectTitle">Urban Pulse: Insights into Economic Flourish</h2>
         </div>
         <!--  -->
         <div id="mainDiv">
