adding checkboxes for education level

--- a/index.html
+++ b/index.html
@@ -58,6 +58,33 @@
                         </svg>
                     </div>
                     <div id="rightTopBottomDiv">
+                                <div>
+                                    <label style="margin-bottom: 10px; display: inline-block; margin-left: 10px;">Education levels:</label>
+                                        <div style="margin-bottom: 10px;margin-left: 10px;">
+                                            <span style="display: inline-block; width: 20px;">
+                                                <input type="checkbox" id="edu-high-school" class="educationCheckbox" value="HighSchoolOrCollege">
+                                            </span>
+                                            <label for="edu-high-school" style="display: inline-block;">college</label>
+                                        </div>
+                                        <div style="margin-bottom: 10px;margin-left: 10px;">
+                                            <span style="display: inline-block; width: 20px;">
+                                                <input type="checkbox" id="edu-bachelors" class="educationCheckbox" value="Bachelors">
+                                            </span>
+                                            <label for="edu-bachelors" style="display: inline-block;">Bachelors</label>
+                                        </div>
+                                        <div style="margin-bottom: 10px;margin-left: 10px;">
+                                            <span style="display: inline-block; width: 20px;">
+                                                <input type="checkbox" id="edu-graduate" class="educationCheckbox" value="Graduate">
+                                            </span>
+                                            <label for="edu-graduate" style="display: inline-block;">Graduate</label>
+                                        </div>
+                                        <div style="margin-bottom: 10px;margin-left: 10px;">
+                                            <span style="display: inline-block; width: 140px;">
+                                                <input type="checkbox" id="edu-low" class="educationCheckbox" value="Low">
+                                            </span>
+                                            <label for="edu-graduate" style="display: inline-block;">low</label>
+                                        </div>
+                                </div>
                         <svg id="ram" width="150%" height="100%">
 
                         </svg>
