--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </svg>
                 </div>
                 <div class="leftCell"
-                    style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100%;">
+                    style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
 
                     <label for="age" style="margin-bottom: 10px;">Choose an age group:</label>
                     <select id="age-group" name="age-group" style="margin-bottom: 10px;">
